[package]
name = "ode_solvers"
version = "0.3.4"
authors = ["Sylvain Renevey <syl.renevey@gmail.com>"]
description = "Numerical methods to solve ordinary differential equations (ODEs) in Rust."
edition = "2018"

documentation = "https://docs.rs/ode_solvers/"
homepage = "https://srenevey.github.io/ode-solvers/"
repository = "https://github.com/srenevey/ode-solvers"
readme = "README.md"

keywords = ["ode", "math", "solver", "equations"]
categories = ["science"]

license = "BSD-3-Clause"

[dependencies]
nalgebra = { version = "0.29.0", default-features = false, features = ["std"] }
num-traits = "0.2.14"
simba = "0.5.1"
thiserror = "1.0.25"
